@@ -1,6 +1,6 @@
 # VevDB for Java
 
-This package is the Java 21 Foreign Function & Memory wrapper for VevDB's native
+This package is the Java 25 Foreign Function & Memory wrapper for VevDB's native
 C ABI. It is the lower JVM layer used by the Clojure package.
 
 Build the Java wrapper:
@@ -22,10 +22,10 @@ The wrapper loads the native library in this order:
 4. bundled classpath resource:
    `com/vevdb/native/<platform>/<mapped-library-name>`
 
-Java FFM is still a preview API, so local runs need:
+Java 25's FFM API is final. Local runs only need native access enabled:
 
 ```sh
---enable-preview --enable-native-access=ALL-UNNAMED
+--enable-native-access=ALL-UNNAMED
 ```
 
 Maven coordinate:
